--- a/Homepage.html
+++ b/Homepage.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Homepage</title>
+  <meta charset="utf-8">
+  <title>Homepage</title>
 </head>
 <body>
-<h1>Wyze</h1>
+  <h1>Wyze</h1>
 </body>
 </html>
