revision of budget.html

--- a/budget.html
+++ b/budget.html
@@ -6,11 +6,11 @@
 -->
 <html>
 	<head>
-		<title>Elements - Projection by TEMPLATED</title>
+		<title>Budget</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<link rel="stylesheet" href="assets/css/bootstrap.css"/>
+		<link rel="stylesheet" href="assets/css/bootstrap.min.css"/>
 		<link rel="stylesheet" href="assets/css/budget.css"/>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	</head>
@@ -49,7 +49,7 @@
     									<td><strong>Total</strong></td>
     									<td>
     									   <div class="progress">
-                                              <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%">$450 of $600</div>
+                                              <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%">$300 of $600</div>
                                             </div>
     									</td>
     									<td></td>
@@ -69,7 +69,7 @@
     									<td>Gas and Fuel</td>
     									<td>
     									    <div class="progress">
-                                              <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%"></div>
+                                              <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="width: 30%">$30 of $100</div>
                                             </div>
     									</td>
     									<td>
@@ -80,7 +80,7 @@
     									<td>Shopping</td>
     									<td>
     									    <div class="progress">
-                                              <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%"></div>
+                                              <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width: 25%">$20 of $100</div>
                                             </div>
     									</td>
     									<td>
@@ -91,7 +91,7 @@
     									<td>Electric</td>
     									<td>
     									    <div class="progress">
-                                              <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%"></div>
+                                              <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%">$150 of $150</div>
                                             
                                             </div>
                                         </td>
