--- a/transactions.html
+++ b/transactions.html
@@ -13,9 +13,9 @@
 	<body onload="addTable()" class="subpage">
 		<header id="header">
 	      <div class="inner">
-	        <a href="index.html" class="logo"><strong>Wyze</strong></a>
+	        <a href="home.html" class="logo"><strong>Wyze</strong></a>
 	        <nav id="nav">
-	          <a href="index.html">Home</a>
+	          <a href="home.html">Home</a>
 	          <a href="transactions.html">Transactions</a>
 	          <a href="budget.html">Budget</a>
 	          <a href="account.html">My Account</a>
